--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,4 @@
 /.metadata/
-# Compiled class file
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-/.metadata/
 
 # Miscellaneous
 *.java.hsp
@@ -80,3 +56,4 @@ LMS/target/m2e-wtp/web-resources/META-INF/maven/com.yongmoon/lms/pom.properties
 LMS/target/m2e-wtp/web-resources/META-INF/maven/com.yongmoon/lms/pom.properties
 LMS/target/m2e-wtp/web-resources/META-INF/maven/com.yongmoon/lms/pom.properties
 LMS/target/m2e-wtp/web-resources/META-INF/maven/com.yongmoon/lms/pom.properties
+*.properties
