--- a/.gitignore
+++ b/.gitignore
@@ -156,4 +156,4 @@ hs_err_pid*
 replay_pid*
 
 # End of https://www.toptal.com/developers/gitignore/api/java,eclipse
-LMS/target/classes/*
+LMS/target/classes/
